--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <main>
       <section class="portfolio-filters">
         <div class="container all-section">
-          <h1 class="fontshone visually-hidden">Images</h1>
+          <h1 class="visually-hidden">Images</h1>
           <ul class="list filters-flex">
             <li><button class="filters-buttons" type="button">All</button></li>
             <li>
@@ -74,20 +74,162 @@
             </li>
           </ul>
 
-          <ul class="list list-portfolio-flex">
-            <li class="list-card">
-              <a class="link" href="">
-                <img
-                  src="./images/pagesbankapp.jpg"
-                  alt="Application pages view for logging in to the bank and managing your bank account. 
+          <ul class="portfolio-gallery-grid flex-grid">
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-portfolio-flex">
+                <div class="portfolio-list-link-div-portfolio-flex">
+                  <img
+                    src="./images/pagesbankapp.jpg"
+                    alt="Application pages view for logging in to the bank and managing your bank account. 
                 The dominant colors are purple and white. Purple at the top of the page, white at the bottom"
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-list-link-div-p-flex-gird">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-flex-grid">
+                <div class="portfolio-list-link-div-flex-grid">
+                  <img
+                  src="./images/PhoneReadQRcode.jpg"
+                  alt="Smartphone held in fingers and reading QR code with smartphone."
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre fonts-in-title-card">
-                  Banking App Interface Concept
+                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Cashless Payment</h2>
+                <p class="p-font portfolio-list-link-div-p-flex-gird">Marketing</p>
+              </a>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-flex-grid">
+                <div class="portfolio-list-link-div-flex-grid">
+                  <img
+                  src="./images/Computerandsmartphonewithdesamefoto.jpg"
+                  alt="On the laptop screen and on the smartphone screen there is the same 
+              colorful image with the words - return to normalcy."
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Meditation App</h2>
+                <p class="p-font portfolio-list-link-div-p-flex-gird">App</p>
+              </a>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-flex-grid">
+                <div class="portfolio-list-link-div-flex-grid">
+                  <img
+                  src="./images/cocpitincar.jpg"
+                  alt="Cockpit in the car. Smartphone in the holder with staking turned on."
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Taxi Service</h2>
+                <p class="p-font portfolio-list-link-div-p-flex-gird">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-flex-grid">
+                <div class="portfolio-list-link-div-flex-grid">
+                  <img
+                  src="./images/destopwithnun.jpg"
+                  alt="Five images with desktop proposals with a moon theme"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                  Screen Illustrations
                 </h2>
-                <p class="p-font p-in-card">App</p>
+                <p class="p-font portfolio-list-link-div-p-flex-gird">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-flex-grid">
+                <div class="portfolio-list-link-div-flex-grid">
+                  <img
+                  src="./images/Womeninorangedress.jpg"
+                  alt="A woman in a yellow sweater, gray hat and glasses looks at the smartphone"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Online Courses</h2>
+                <p class="p-font portfolio-list-link-div-p-flex-gird">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-flex-grid">
+                <div class="portfolio-list-link-div-flex-grid">
+                  <img
+                  src="./images/leaflet.jpg"
+                  alt="Description of home control presented by a woman in a white turtleneck. Control options via smartphone and touch screen are shown."
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                  Instagram Stories Concept
+                </h2>
+                <p class="p-font portfolio-list-link-div-p-flex-gird">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-flex-grid">
+                <div class="portfolio-list-link-div-flex-grid">
+                  <img
+                  src="./images/womenwithbag.jpg"
+                  alt="A woman dressed in gray pants, a gray long sweater and a white blouse carries fruits and vegetables in a white mesh bag."
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Organic Food</h2>
+                <p class="p-font pportfolio-list-link-div-p-flex-gird">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-li-flex-grid">
+              <a href="" class="portfolio-list-link-flex-grid">
+                <div class="portfolio-list-link-div-flex-grid">
+                  <img
+                  src="./images/cafeewitchmilk.jpg"
+                  alt="The barista pours milk to create a pattern on the surface of the coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Fresh Coffee</h2>
+                <p class="p-font portfolio-list-link-div-p-flex-gird">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+
+
+<!--          <ul class="list list-portfolio-flex">
+            <li class="list-card">
+              <a class="link" href="">
+                <div class="list-link-div-portfolio-flex">
+                  <img
+                    src="./images/pagesbankapp.jpg"
+                    alt="Application pages view for logging in to the bank and managing your bank account. 
+                The dominant colors are purple and white. Purple at the top of the page, white at the bottom"
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre fonts-in-title-card">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="p-font p-in-card">App</p>
+                </div>
               </a>
             </li>
             <li class="list-card">
@@ -192,7 +334,7 @@
                 <p class="p-font p-in-card">Web Site</p>
               </a>
             </li>
-          </ul>
+          </ul>-->
         </div>
       </section>
     </main>
