main in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,17 +74,17 @@
             </li>
           </ul>
 
-          <ul class="portfolio-gallery-grid flex-grid">
+          <ul class="flex-grid portfolio-gallery-grid">
             <li class="portfolio-li-flex-grid">
-              <a href="" class="portfolio-list-link-portfolio-flex">
-                <div class="portfolio-list-link-div-portfolio-flex">
-                  <img
-                    src="./images/pagesbankapp.jpg"
-                    alt="Application pages view for logging in to the bank and managing your bank account. 
+              <a href="" class="portfolio-list-link-flex-grid">
+                <img
+                  src="./images/pagesbankapp.jpg"
+                  alt="Application pages view for logging in to the bank and managing your bank account. 
                 The dominant colors are purple and white. Purple at the top of the page, white at the bottom"
-                    width="360"
-                    height="300"
-                  />
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-list-link-div-flex-grid">
                   <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
                     Banking App Interface Concept
                   </h2>
@@ -94,127 +94,150 @@
             </li>
             <li class="portfolio-li-flex-grid">
               <a href="" class="portfolio-list-link-flex-grid">
-                <div class="portfolio-list-link-div-flex-grid">
-                  <img
+                <img
                   src="./images/PhoneReadQRcode.jpg"
                   alt="Smartphone held in fingers and reading QR code with smartphone."
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Cashless Payment</h2>
-                <p class="p-font portfolio-list-link-div-p-flex-gird">Marketing</p>
-              </a>
+                <div class="portfolio-list-link-div-flex-grid">
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Cashless Payment
+                  </h2>
+                  <p class="p-font portfolio-list-link-div-p-flex-gird">
+                    Marketing
+                  </p>
                 </div>
               </a>
             </li>
             <li class="portfolio-li-flex-grid">
               <a href="" class="portfolio-list-link-flex-grid">
-                <div class="portfolio-list-link-div-flex-grid">
-                  <img
+                <img
                   src="./images/Computerandsmartphonewithdesamefoto.jpg"
                   alt="On the laptop screen and on the smartphone screen there is the same 
               colorful image with the words - return to normalcy."
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Meditation App</h2>
-                <p class="p-font portfolio-list-link-div-p-flex-gird">App</p>
-              </a>
+                <div class="portfolio-list-link-div-flex-grid">
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Meditation App
+                  </h2>
+                  <p class="p-font portfolio-list-link-div-p-flex-gird">App</p>
                 </div>
               </a>
             </li>
             <li class="portfolio-li-flex-grid">
               <a href="" class="portfolio-list-link-flex-grid">
-                <div class="portfolio-list-link-div-flex-grid">
-                  <img
+                <img
                   src="./images/cocpitincar.jpg"
                   alt="Cockpit in the car. Smartphone in the holder with staking turned on."
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Taxi Service</h2>
-                <p class="p-font portfolio-list-link-div-p-flex-gird">Marketing</p>
+                <div class="portfolio-list-link-div-flex-grid">
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Taxi Service
+                  </h2>
+                  <p class="p-font portfolio-list-link-div-p-flex-gird">
+                    Marketing
+                  </p>
                 </div>
               </a>
             </li>
             <li class="portfolio-li-flex-grid">
               <a href="" class="portfolio-list-link-flex-grid">
-                <div class="portfolio-list-link-div-flex-grid">
-                  <img
+                <img
                   src="./images/destopwithnun.jpg"
                   alt="Five images with desktop proposals with a moon theme"
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
-                  Screen Illustrations
-                </h2>
-                <p class="p-font portfolio-list-link-div-p-flex-gird">Design</p>
+                <div class="portfolio-list-link-div-flex-grid">
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Screen Illustrations
+                  </h2>
+                  <p class="p-font portfolio-list-link-div-p-flex-gird">
+                    Design
+                  </p>
                 </div>
               </a>
             </li>
             <li class="portfolio-li-flex-grid">
               <a href="" class="portfolio-list-link-flex-grid">
-                <div class="portfolio-list-link-div-flex-grid">
-                  <img
+                <img
                   src="./images/Womeninorangedress.jpg"
                   alt="A woman in a yellow sweater, gray hat and glasses looks at the smartphone"
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Online Courses</h2>
-                <p class="p-font portfolio-list-link-div-p-flex-gird">Marketing</p>
+                <div class="portfolio-list-link-div-flex-grid">
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Online Courses
+                  </h2>
+                  <p class="p-font portfolio-list-link-div-p-flex-gird">
+                    Marketing
+                  </p>
                 </div>
               </a>
             </li>
             <li class="portfolio-li-flex-grid">
               <a href="" class="portfolio-list-link-flex-grid">
-                <div class="portfolio-list-link-div-flex-grid">
-                  <img
+                <img
                   src="./images/leaflet.jpg"
                   alt="Description of home control presented by a woman in a white turtleneck. Control options via smartphone and touch screen are shown."
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
-                  Instagram Stories Concept
-                </h2>
-                <p class="p-font portfolio-list-link-div-p-flex-gird">Design</p>
+                <div class="portfolio-list-link-div-flex-grid">
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="p-font portfolio-list-link-div-p-flex-gird">
+                    Design
+                  </p>
                 </div>
               </a>
             </li>
             <li class="portfolio-li-flex-grid">
               <a href="" class="portfolio-list-link-flex-grid">
-                <div class="portfolio-list-link-div-flex-grid">
-                  <img
+                <img
                   src="./images/womenwithbag.jpg"
                   alt="A woman dressed in gray pants, a gray long sweater and a white blouse carries fruits and vegetables in a white mesh bag."
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Organic Food</h2>
-                <p class="p-font pportfolio-list-link-div-p-flex-gird">Web Site</p>
+                <div class="portfolio-list-link-div-flex-grid">
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Organic Food
+                  </h2>
+                  <p class="p-font portfolio-list-link-div-p-flex-gird">
+                    Web Site
+                  </p>
                 </div>
               </a>
             </li>
             <li class="portfolio-li-flex-grid">
               <a href="" class="portfolio-list-link-flex-grid">
-                <div class="portfolio-list-link-div-flex-grid">
-                  <img
+                <img
                   src="./images/cafeewitchmilk.jpg"
                   alt="The barista pours milk to create a pattern on the surface of the coffee"
                   width="360"
                   height="300"
                 />
-                <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">Fresh Coffee</h2>
-                <p class="p-font portfolio-list-link-div-p-flex-gird">Web Site</p>
+                <div class="portfolio-list-link-div-flex-grid">
+                  <h2 class="fontshthre portfolio-list-link-div-h-flex-gird">
+                    Fresh Coffee
+                  </h2>
+                  <p class="p-font portfolio-list-link-div-p-flex-gird">
+                    Web Site
+                  </p>
                 </div>
               </a>
             </li>
           </ul>
 
-
-<!--          <ul class="list list-portfolio-flex">
+          <!--          <ul class="list list-portfolio-flex">
             <li class="list-card">
               <a class="link" href="">
                 <div class="list-link-div-portfolio-flex">
