Corrected in index lass visually-hidden

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
       <!-- Section 1-->
       <section class="section-what-we-use">
         <div class="container all-section">
-          <div class="visually-hidden">
-            <h2>What we use</h2>
-          </div>
+          <h2 class="visually-hidden">What we use</h2>
           <ul class="list list-section-one-flex">
             <li class="li-what-we-use">
               <h3 class="fontshthre">Strategy</h3>
