--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
           </ul>
         </div>
       </section>
-
-    --></main>
+    </main>
     <footer class="fooster-parameters">
       <!--LOGO-->
       <div class="container all-section">
